# PRNG-using-ECGA

./: .gitignore  Bin_Handlers.py  EC_init.py  Input_Params.py  README.md  pyproject.toml
Images/: 4.2.03.tiff  4.2.05.tiff
prng_ecga/: Bin_Handlers.py  EC_init.py  Hash.py  NIST_test.py  Optimisation.py  __init__.py  config.py  main.py  utils.py
src/: Bin_Handlers.py  EC_init.py  Hash.py  Optimisation.py  PRNS_first.py  main.py  utils.py
